--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <font color="YELLOW" size="50" face="BASKERBILLE OLD FACE">WELCOME TO VIGNAN</font>
         </marquee>
         <!--<a href="/index.html">Home</a>&nbsp;&nbsp;&nbsp;-->
-        <a href=https://rushitha505.github.io/college_page/index.html>Home</a>&nbsp;&nbsp;&nbsp;
-        <a href=https://rushitha505.github.io/college_page/login.html>Login</a>&nbsp;&nbsp;&nbsp;
-        <a href=https://rushitha505.github.io/college_page/reg.html>Register</a>&nbsp;&nbsp;&nbsp;
-        <a href=https://rushitha505.github.io/college_page/about_us.html>About Us</a>&nbsp;&nbsp;&nbsp;
-        <a href=https://rushitha505.github.io/college_page/contact_us.html>Contact Us</a><br><br>
+        <a href="https://rushitha505.github.io/college_page/index.html">Home</a>&nbsp;&nbsp;&nbsp;
+        <a href="https://rushitha505.github.io/college_page/login.html">Login</a>&nbsp;&nbsp;&nbsp;
+        <a href="https://rushitha505.github.io/college_page/reg.html">Register</a>&nbsp;&nbsp;&nbsp;
+        <a href="https://rushitha505.github.io/college_page/about_us.html">About Us</a>&nbsp;&nbsp;&nbsp;
+        <a href="https://rushitha505.github.io/college_page/contact_us.html">Contact Us</a><br><br>
         <img src=image9.jpg width="700">
         
     </center>
