--- a/contact_us.html
+++ b/contact_us.html
@@ -12,11 +12,11 @@
         <marquee direction="right" behavior="alternate">
             <font color="BLUE" size="50" face="BASKERBILLE OLD FACE">WELCOME TO VIGNAN</font>
         </marquee>
-        <a href=https://rushitha505.github.io/college_page/index.html>Home</a>&nbsp;&nbsp;&nbsp;
-        <a href=https://rushitha505.github.io/college_page/login.html>Login</a>&nbsp;&nbsp;&nbsp;
-        <a href=https://rushitha505.github.io/college_page/reg.html>Register</a>&nbsp;&nbsp;&nbsp;
-        <a href=https://rushitha505.github.io/college_page/about_us.html>About Us</a>&nbsp;&nbsp;&nbsp;
-        <a href=https://rushitha505.github.io/college_page/contact_us.html>Contact Us</a><br><br>
+        <a href="https://rushitha505.github.io/college_page/index.html">Home</a>&nbsp;&nbsp;&nbsp;
+        <a href="https://rushitha505.github.io/college_page/login.html">Login</a>&nbsp;&nbsp;&nbsp;
+        <a href="https://rushitha505.github.io/college_page/reg.html">Register</a>&nbsp;&nbsp;&nbsp;
+        <a href="https://rushitha505.github.io/college_page/about_us.html">About Us</a>&nbsp;&nbsp;&nbsp;
+        <a href="https://rushitha505.github.io/college_page/contact_us.html">Contact Us</a><br><br>
        
         Name:<input type="text" placeholder="Enter Your Nmae"><br><br>
         Mail ID:<input type="text" placeholder="Enter Your Mail ID"><br><br>
